<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.midterm.MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/search_term_hint_string" 
        android:maxLength="40">

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/editText1"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/editText1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageview_description"
        android:onClick="onHistoryButtonClicked"
        android:scaleType="fitXY"
        android:src="@drawable/history" />

    <Button
        android:id="@+id/button1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/submit_button_string" 
        android:onClick="onSubmitButtonClicked"/>

</RelativeLayout>
