<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.midterm.DetailsActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="380dp"
        android:layout_height="230dp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imageview_description"
        android:src="@drawable/icon_500px" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="18dp"
        android:text="@string/textview"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/notes_hint_string"
        android:maxLength="35" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageview_description"
        android:onClick="onAddCommentClicked"
        android:scaleType="fitXY"
        android:src="@drawable/add_comment" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/textview"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/textView1"
        android:contentDescription="@string/imageview_description"
        android:scaleType="fitXY"
        android:src="@drawable/icon_500px" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/imageView2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/notes_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/notes_description"
        android:visibility="gone" />

</RelativeLayout>
